msm_cpufreq: setting default boot min/max frequencies
Conflicts:
	arch/arm/configs/jamiethemorris_defconfig

Conflicts:
	arch/arm/configs/dlx_defconfig

--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -455,6 +455,9 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_IPC_ROUTER_SECURITY is not set
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
+CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -555,9 +558,7 @@ CONFIG_IGNORE_L2_FALSE_ALRAM=y
 CONFIG_MSM_DCVS=y
 CONFIG_HAVE_ARCH_HAS_CURRENT_TIMER=y
 # CONFIG_MSM_CACHE_DUMP is not set
-CONFIG_ACPU_CUSTOM_FREQ_SUPPORT=y
-CONFIG_ACPU_SPEED_BIN_FREQ_SUPPORT=y
-CONFIG_ACPU_MAX_FREQ=1512000
+# CONFIG_ACPU_CUSTOM_FREQ_SUPPORT is not set
 CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TTY_DEV is not set
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
