--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -1922,6 +1922,17 @@ config MSM_CPU_FREQ_MIN
 	depends on MSM_CPU_FREQ_SET_MIN_MAX
 	default 245760
 
+config MSM_CPU_FREQ_SET_DEFAULT_MIN
+	bool "Set Default Min CPU frequency."
+	default n
+	help
+	   Specify a default min frequency when
+	   a governor has not been configured to change this.
+	   
+config MSM_CPU_FREQ_DEFAULT_MIN
+	int "Default Min CPU Frequency"
+	depends on MSM_CPU_FREQ_SET_DEFAULT_MIN
+	
 endif # CPU_FREQ_MSM
 
 config MSM_CPU_AVS
