--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -185,6 +185,13 @@ config CPU_FREQ_GOV_ONDEMAND_MULTI_PHASE
 	help
 	  'multi-phase' - This driver adds a new algo to save power
 
+config CPUFREQ_ID_PERFLOCK
+	bool "Intellidemand Performance Lock"
+	depends on CPU_FREQ_GOV_INTELLIDEMAND
+	default	y
+	help
+		Minimum CPU performance lock for Intellidemand governor
+
 config CPU_FREQ_GOV_INTERACTIVE
 	tristate "'interactive' cpufreq policy governor"
 	help
