--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -457,9 +457,7 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_IPC_ROUTER_SECURITY is not set
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
-CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
+# CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -603,6 +601,8 @@ CONFIG_MSM_CPU_PWRCTL=y
 # CONFIG_QUALCOMM_WLAN_PXO is not set
 # CONFIG_IOEXTENDER is not set
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_UPDATE_LCDC_LUT=y
+CONFIG_LCD_KCAL=y
 
 #
 # System MMU
@@ -778,8 +778,8 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
-# CONFIG_CPU_FREQ_GOV_ONDEMAND_MULTI_PHASE is not set
+# CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE is not set
+CONFIG_CPU_FREQ_GOV_ONDEMAND_MULTI_PHASE=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 
