--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -741,8 +741,7 @@ CONFIG_UACCESS_WITH_MEMCPY=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
 CONFIG_ARM_FLUSH_CONSOLE_ON_RESTART=y
-CONFIG_VMWARE_MVP=y
-# CONFIG_VMWARE_MVP_DEBUG is not set
+# CONFIG_VMWARE_MVP is not set
 # CONFIG_CP_ACCESS is not set
 
 #
