--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -459,7 +459,9 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
 CONFIG_CMDLINE_OPTIONS=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-# CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX is not set
+CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
+CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
+CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
