--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -222,12 +222,14 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_FIOPS=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_FIOPS is not set
 # CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_ROW is not set
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_BFQ=y
 # CONFIG_DEFAULT_SIO is not set
@@ -2027,6 +2029,7 @@ CONFIG_SPI_SPIDEV=m
 # CONFIG_SPMI is not set
 CONFIG_SLIMBUS=y
 CONFIG_SLIMBUS_MSM_CTRL=y
+# CONFIG_SLIMBUS_MSM_NGD is not set
 # CONFIG_HSI is not set
 
 #
