--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -744,3 +744,5 @@ obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
 obj-$(CONFIG_MSM_IPC_ROUTER_SECURITY)+= msm_ipc_router_security.o
 
 obj-$(CONFIG_LCD_KCAL) += msm_kcal_ctrl.o
+
+obj-$(CONFIG_MSM_SLEEPER) += msm-sleeper.o
