--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -461,9 +461,8 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_DALRPC is not set
 CONFIG_CMDLINE_OPTIONS=y
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX=y
-CONFIG_MSM_CPU_FREQ_DEFAULT_MAX=1512000
-CONFIG_MSM_CPU_FREQ_DEFAULT_MIN=384000
+# CONFIG_MSM_CPU_FREQ_SET_DEFAULT_MIN_MAX is not set
+CONFIG_MSM_SLEEPER=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -927,6 +926,7 @@ CONFIG_DEFAULT_CUBIC=y
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
+CONFIG_HTC_LARGE_TCP_INITIAL_BUFFER=y
 # CONFIG_HTC_NETWORK_DEBUG is not set
 CONFIG_HTC_MONITOR=y
 CONFIG_IPV6=y
