--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -99,13 +99,6 @@ config CPU_FREQ_DEFAULT_GOV_CONSERVATIVE
 	  Be aware that not all cpufreq drivers support the conservative
 	  governor. If unsure have a look at the help section of the
 	  driver. Fallback governor will be the performance governor.
-
-config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
-	bool "intellidemand"
-	select CPU_FREQ_GOV_INTELLIDEMAND
-	help
-	  Use the CPUFreq governor 'intellidemand' as default. This is
-	  based on Ondemand with browsing detection based on GPU loading
 	  
 config CPU_FREQ_DEFAULT_GOV_PRESERVATIVE
 	bool "preservative"
@@ -114,6 +107,15 @@ config CPU_FREQ_DEFAULT_GOV_PRESERVATIVE
 	help
 	  Use the CPUFreq governor 'preservative' as default. This allows
 	  you to eat jam.
+
+config CPU_FREQ_DEFAULT_GOV_INTELLIACTIVE
+	bool "intelliactive"
+	select CPU_FREQ_GOV_INTELLIACTIVE
+	help
+	  Use the CPUFreq governor 'intelliactive' as default. This allows
+	  you to get a full dynamic cpu frequency capable system by simply
+	  loading your cpufreq low-level hardware driver, using the
+	  'interactive' governor for latency-sensitive workloads.
 
 endchoice
 
@@ -184,13 +186,6 @@ config CPU_FREQ_GOV_ONDEMAND_MULTI_PHASE
 	help
 	  'multi-phase' - This driver adds a new algo to save power
 
-config CPUFREQ_ID_PERFLOCK
-	bool "Intellidemand Performance Lock"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
-	default	y
-	help
-		Minimum CPU performance lock for Intellidemand governor
-
 config CPU_FREQ_GOV_CONSERVATIVE
 	tristate "'conservative' cpufreq governor"
 	depends on CPU_FREQ
@@ -213,44 +208,6 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
-
-config CPU_FREQ_GOV_INTELLIDEMAND
-        tristate "'intellidemand' cpufreq policy governor"
-        select CPU_FREQ_TABLE
-        help
-          'intellidemand' - This driver adds a dynamic cpufreq policy governor.
-          The governor does a periodic polling and
-          changes frequency based on the CPU utilization.
-          The support for this governor depends on CPU capability to
-          do fast frequency switching (i.e, very low latency frequency
-          transitions). with browsing detection based on GPU loading
-
-          To compile this driver as a module, choose M here: the
-          module will be called cpufreq_ondemand.
-
-          For details, take a look at linux/Documentation/cpu-freq.
-
-          If in doubt, say N.
-
-config INTELLI_MAX_ACTIVE_FREQ
-	int "Max Active Freq for Intellidemand"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
-	default	1512000
-	help
-		Set default max active frequency for intellidemand
-
-config INTELLI_MAX_INACTIVE_FREQ
-	int "Max Inactive Freq for Intellidemand"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
-	default	1134000
-	help
-		Set default max inactive frequency for intellidemand
-
-config CPUFREQ_LIMIT_MAX_FREQ
-	bool "Limit Max Freq"
-	depends on CPU_FREQ_GOV_INTELLIDEMAND
-	help
-		Limit Max Freq while screen is on for Intellidemand governor
 	  
 config CPU_FREQ_GOV_PRESERVATIVE
 	tristate "'preservative' cpufreq governor"
@@ -261,6 +218,23 @@ config CPU_FREQ_GOV_PRESERVATIVE
 	  If in doubt, say N.
 
 	  If not in doubt, say N.
+
+config CPU_FREQ_GOV_INTELLIACTIVE
+	tristate "'intelliactive' cpufreq policy governor"
+	help
+	  'intelliactive' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  This governor attempts to reduce the latency of clock
+	  increases so that the system is more responsive to
+	  interactive workloads.
+
+	  To compile this driver as a module, choose M here: the
+	  module will be called cpufreq_interactive.
+
+	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
