--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -364,10 +364,8 @@ CONFIG_MSM_RPM=y
 CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_SFPB=y
-CONFIG_PERFLOCK=y
+# CONFIG_PERFLOCK is not set
 # CONFIG_DEBUG_KSWAPD is not set
-CONFIG_PERFLOCK_FIX_UP=y
-# CONFIG_PERFLOCK_BOOT_LOCK is not set
 
 #
 # MSM Board Selection
@@ -731,7 +729,7 @@ CONFIG_DONT_MAP_HOLE_AFTER_MEMBANK0=y
 # CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
-# CONFIG_UACCESS_WITH_MEMCPY is not set
+CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_SECCOMP is not set
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_DEPRECATED_PARAM_STRUCT is not set
@@ -1843,6 +1841,7 @@ CONFIG_UNIX98_PTYS=y
 # CONFIG_TRACE_SINK is not set
 # CONFIG_DEVMEM is not set
 # CONFIG_DEVKMEM is not set
+CONFIG_FRANDOM=y
 
 #
 # Serial drivers
