squashed: misc touch-ups of previous commits

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -3,6 +3,7 @@
 #
 
 # Each configuration option enables a list of files.
+ccflags-y := -Wno-implicit-function-declaration
 
 wm97xx-ts-y := wm97xx-core.o
 
