--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -457,6 +457,7 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 # CONFIG_MSM_IPC_ROUTER_SECURITY is not set
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
+CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -896,11 +897,11 @@ CONFIG_TCP_CONG_VEGAS=y
 # CONFIG_TCP_CONG_VENO is not set
 CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
-# CONFIG_DEFAULT_CUBIC is not set
+CONFIG_DEFAULT_CUBIC=y
 # CONFIG_DEFAULT_VEGAS is not set
-CONFIG_DEFAULT_WESTWOOD=y
+# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_RENO is not set
-CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_DEFAULT_TCP_CONG="cubic"
 # CONFIG_TCP_MD5SIG is not set
 CONFIG_HTC_LARGE_TCP_INITIAL_BUFFER=y
 # CONFIG_HTC_NETWORK_DEBUG is not set
@@ -2841,6 +2842,7 @@ CONFIG_SND_SOC_WCD9304=y
 CONFIG_SND_SOC_WCD9310=y
 CONFIG_SND_SOC_CS8427=y
 CONFIG_SND_SOC_MSM_STUB=y
+CONFIG_SOUND_CONTROL_HAX_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
@@ -3372,6 +3374,7 @@ CONFIG_QCACHE=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_LOGGER=y
+CONFIG_LOGCAT_SIZE=128
 CONFIG_ANDROID_PERSISTENT_RAM=y
 CONFIG_ANDROID_RAM_CONSOLE=y
 CONFIG_DEBUG_BLDR_LOG=y
