--- a/arch/arm/configs/dlx_defconfig
+++ b/arch/arm/configs/dlx_defconfig
@@ -1,3 +1,7 @@
+#
+# Automatically generated file; DO NOT EDIT.
+# Linux/arm 3.4.10 Kernel Configuration
+#
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_MIGHT_HAVE_PCI=y
@@ -2842,7 +2846,6 @@ CONFIG_SND_SOC_WCD9304=y
 CONFIG_SND_SOC_WCD9310=y
 CONFIG_SND_SOC_CS8427=y
 CONFIG_SND_SOC_MSM_STUB=y
-CONFIG_SOUND_CONTROL_HAX_GPL=y
 # CONFIG_SOUND_PRIME is not set
 CONFIG_HID_SUPPORT=y
 CONFIG_HID=y
